testing adding poems to table...

--- a/poetry.html
+++ b/poetry.html
@@ -1,82 +1,329 @@
 <html>
-
-	<head>
-		<title>Violet Sinnarkar</title>
-		<link rel = "stylesheet" type = "text/css" href = "css/main.css">
-
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141113114-1"></script>
-		<script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
-		  gtag('config', 'UA-141113114-1');
-		</script>
-
-	</head>
-
-	<body>
-
-		<h1>Violet Sinnarkar</h1>
-
-		<nav>
-    		<ul>
-					<li><a href="index.html" style="color: #8F5E99">Home</a></li>
-					<li><a href="cv_20251005.pdf" style="color: #8F5E99">CV</a></li>
-					<li><a href="poetry.html" style="color: #8F5E99">Poetry</a></li>
-					<li><a href="blog.html" style="color: #8F5E99">Blog</a></li>
-    		</ul>
-		</nav>
-
-		<blockquote>
-		Poetry is not only dream and vision; it is the skeleton architecture of our lives. It lays the foundations for a future of change, a bridge across our fears of what has never been before.
-		<br>
-		-Audre Lorde, <i>Poetry Is Not A Luxury</i>
-		</blockquote>
-
-		<table id="poetryTable" style="width: 100%; border-collapse: collapse; margin-top: 20px;">
-    			<thead>
-        			<tr>
-            			<th>Title</th>
-            			<th>Author</th>
-				<th>Nationality</th>
-            			<th>Year Published</th>
-            			<th>Era</th>
-            			<th>Theme</th>
-        		</tr>
-    		</thead>
-    		<tbody>
-        	<!-- Fill in works later -->
-    		</tbody>
-		</table>
-
-		<footer>
-
-			<a href = "https://www.linkedin.com/in/vasinnarkar/" target="_blank">
-				<div class = "icon">
-					<object height = 25px width= 25px type="image/svg+xml" data="linkedin.svg">
-					</object>
-				</div>
-			</a>
-
-			<a href = "https://twitter.com/violetsinn" target="_blank">
-				<div class = "icon">
-					<object height = 25px width= 25px type="image/svg+xml" data="twitter.svg">
-					</object>
-				</div>
-			</a>
-
-			<a href = "https://github.com/violetsinn" target="_blank">
-				<div class = "icon">
-					<object height = 25px width= 25px type="image/svg+xml" data="github.svg">
-					</object>
-				</div>
-			</a>
-
-    	<p ><small>© Violet Sinnarkar 2019 | <a style="color: #8F5E99" href="credits.html">Credits</a></small></p>
-
-		</footer>
-
-	</body>
-
+   <head>
+      <title>Violet Sinnarkar</title>
+      <link rel = "stylesheet" type = "text/css" href = "css/main.css">
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141113114-1"></script>
+      <script>
+         window.dataLayer = window.dataLayer || [];
+         function gtag(){dataLayer.push(arguments);}
+         gtag('js', new Date());
+         gtag('config', 'UA-141113114-1');
+      </script>
+   </head>
+   <body>
+      <h1>Violet Sinnarkar</h1>
+      <nav>
+         <ul>
+            <li><a href="index.html" style="color: #8F5E99">Home</a></li>
+            <li><a href="cv_20251005.pdf" style="color: #8F5E99">CV</a></li>
+            <li><a href="poetry.html" style="color: #8F5E99">Poetry</a></li>
+            <li><a href="blog.html" style="color: #8F5E99">Blog</a></li>
+         </ul>
+      </nav>
+      <blockquote>
+         Poetry is not only dream and vision; it is the skeleton architecture of our lives. It lays the foundations for a future of change, a bridge across our fears of what has never been before.
+         <br>
+         -Audre Lorde, <i>Poetry Is Not A Luxury</i>
+      </blockquote>
+      <table id="poetryTable" style="width: 100%; border-collapse: collapse; margin-top: 20px;">
+         <thead>
+            <tr>
+               <th>Title</th>
+               <th>Author</th>
+               <th>Nationality</th>
+               <th>Year Published</th>
+               <th>Era</th>
+               <th>Theme</th>
+            </tr>
+         </thead>
+         <tbody>
+            <tr>
+               <td>Hymn to the Penates</td>
+               <td>Robert Southey</td>
+               <td>British</td>
+               <td>1796</td>
+               <td>Romantic</td>
+               <td>Religion, Home, Devotion</td>
+            </tr>
+            <tr>
+               <td>Ozymandius</td>
+               <td>Percy Bysshe Shelley</td>
+               <td>British</td>
+               <td>1818</td>
+               <td>Romantic</td>
+               <td>Impermanence, Hubris</td>
+            </tr>
+            <tr>
+               <td>To His Coy Mistress</td>
+               <td>Andrew Marvell</td>
+               <td>British</td>
+               <td>1681</td>
+               <td>Metaphysical</td>
+               <td>Love, Time, Mortality</td>
+            </tr>
+            <tr>
+               <td>The Uses of Sorrow</td>
+               <td>Mary Oliver</td>
+               <td>American</td>
+               <td>1986</td>
+               <td>Contemporary</td>
+               <td>Resilience, Nature, Healing</td>
+            </tr>
+            <tr>
+               <td>When You Are Old</td>
+               <td>William Butler Yeats</td>
+               <td>Irish</td>
+               <td>1893</td>
+               <td>Modernist</td>
+               <td>Love, Aging, Reflection</td>
+            </tr>
+            <tr>
+               <td>Sonnet 43</td>
+               <td>Elizabeth Barrett Browning</td>
+               <td>British</td>
+               <td>1850</td>
+               <td>Victorian</td>
+               <td>Love, Devotion</td>
+            </tr>
+            <tr>
+               <td>Epitaph to a Dog</td>
+               <td>Lord Byron</td>
+               <td>British</td>
+               <td>1808</td>
+               <td>Romantic</td>
+               <td>Love, Loss, Loyalty</td>
+            </tr>
+            <tr>
+               <td>Half Life</td>
+               <td>Khalil Gibran</td>
+               <td>Lebanese</td>
+               <td>1918</td>
+               <td>Modernist</td>
+               <td>Life, Mortality</td>
+            </tr>
+            <tr>
+               <td>The New Colossus</td>
+               <td>Emma Lazarus</td>
+               <td>American</td>
+               <td>1883</td>
+               <td>Late 19th Century</td>
+               <td>Immigration, Liberty</td>
+            </tr>
+            <tr>
+               <td>Women Don't Riot</td>
+               <td>Ana Castillo</td>
+               <td>American</td>
+               <td>Contemporary</td>
+               <td>Contemporary</td>
+               <td>Feminism, Social Justice</td>
+            </tr>
+            <tr>
+               <td>Late Fragment</td>
+               <td>Raymond Carver</td>
+               <td>American</td>
+               <td>1988</td>
+               <td>Contemporary</td>
+               <td>Love, Loss, Reflection</td>
+            </tr>
+            <tr>
+               <td>You Fit Into Me</td>
+               <td>Margaret Atwood</td>
+               <td>Canadian</td>
+               <td>1960</td>
+               <td>Contemporary</td>
+               <td>Love, Irony</td>
+            </tr>
+            <tr>
+               <td>Funeral Blues</td>
+               <td>W.H. Auden</td>
+               <td>British</td>
+               <td>1936</td>
+               <td>Modernist</td>
+               <td>Grief, Loss</td>
+            </tr>
+            <tr>
+               <td>Those Winter Sundays</td>
+               <td>Robert Hayden</td>
+               <td>American</td>
+               <td>1962</td>
+               <td>Contemporary</td>
+               <td>Family, Sacrifice</td>
+            </tr>
+            <tr>
+               <td>Death Be Not Proud</td>
+               <td>John Donne</td>
+               <td>British</td>
+               <td>1609</td>
+               <td>Metaphysical</td>
+               <td>Mortality, Faith</td>
+            </tr>
+            <tr>
+               <td>No Man is an Island</td>
+               <td>John Donne</td>
+               <td>British</td>
+               <td>1624</td>
+               <td>Metaphysical</td>
+               <td>Community, Interconnectedness</td>
+            </tr>
+            <tr>
+               <td>Desiderata</td>
+               <td>Max Ehrmann</td>
+               <td>American</td>
+               <td>1927</td>
+               <td>Contemporary</td>
+               <td>Life Advice, Philosophy</td>
+            </tr>
+            <tr>
+               <td>Suicide in the Trenches</td>
+               <td>Siegfried Sassoon</td>
+               <td>British</td>
+               <td>1918</td>
+               <td>Modernist</td>
+               <td>War, Trauma</td>
+            </tr>
+            <tr>
+               <td>Mirror, Mirror</td>
+               <td>Spike Mulligan</td>
+               <td>British</td>
+               <td>20th Century</td>
+               <td>Contemporary</td>
+               <td>Humor, Irony</td>
+            </tr>
+            <tr>
+               <td>The Lady's Reward</td>
+               <td>Dorothy Parker</td>
+               <td>American</td>
+               <td>1928</td>
+               <td>Contemporary</td>
+               <td>Love, Satire</td>
+            </tr>
+            <tr>
+               <td>Somebody's Song</td>
+               <td>Dorothy Parker</td>
+               <td>American</td>
+               <td>1920s</td>
+               <td>Contemporary</td>
+               <td>Love, Irony</td>
+            </tr>
+            <tr>
+               <td>Purposely Ungrammatical Love Song</td>
+               <td>Dorothy Parker</td>
+               <td>American</td>
+               <td>1920s</td>
+               <td>Contemporary</td>
+               <td>Love, Humor</td>
+            </tr>
+            <tr>
+               <td>On Being a Woman</td>
+               <td>Dorothy Parker</td>
+               <td>American</td>
+               <td>1920s</td>
+               <td>Contemporary</td>
+               <td>Feminism, Society</td>
+            </tr>
+            <tr>
+               <td>Midnight</td>
+               <td>Dorothy Parker</td>
+               <td>American</td>
+               <td>1920s</td>
+               <td>Contemporary</td>
+               <td>Reflection, Time</td>
+            </tr>
+            <tr>
+               <td>Lullaby</td>
+               <td>Dorothy Parker</td>
+               <td>American</td>
+               <td>1920s</td>
+               <td>Contemporary</td>
+               <td>Love, Melancholy</td>
+            </tr>
+            <tr>
+               <td>Indian Summer</td>
+               <td>Dorothy Parker</td>
+               <td>American</td>
+               <td>1920s</td>
+               <td>Contemporary</td>
+               <td>Reflection, Aging</td>
+            </tr>
+            <tr>
+               <td>Autumn Valentine</td>
+               <td>Dorothy Parker</td>
+               <td>American</td>
+               <td>1920s</td>
+               <td>Contemporary</td>
+               <td>Love, Irony</td>
+            </tr>
+            <tr>
+               <td>Don't Go Far Off</td>
+               <td>Pablo Neruda</td>
+               <td>Chilean</td>
+               <td>1950s</td>
+               <td>Contemporary</td>
+               <td>Love, Longing</td>
+            </tr>
+            <tr>
+               <td>Differences of Opinion</td>
+               <td>Wendy Cope</td>
+               <td>British</td>
+               <td>1980s</td>
+               <td>Contemporary</td>
+               <td>Humor, Relationships</td>
+            </tr>
+            <tr>
+               <td>Next Time</td>
+               <td>Mary Oliver</td>
+               <td>American</td>
+               <td>1980s</td>
+               <td>Contemporary</td>
+               <td>Love, Nature</td>
+            </tr>
+            <tr>
+               <td>Young</td>
+               <td>Anne Sexton</td>
+               <td>American</td>
+               <td>1960s</td>
+               <td>Contemporary</td>
+               <td>Life, Aging</td>
+            </tr>
+            <tr>
+               <td>You Men</td>
+               <td>Juana Ines de la Cruz</td>
+               <td>Mexican</td>
+               <td>17th Century</td>
+               <td>Baroque</td>
+               <td>Gender, Society</td>
+            </tr>
+            <tr>
+               <td>Ode to Numbers</td>
+               <td>Pablo Neruda</td>
+               <td>Chilean</td>
+               <td>20th Century</td>
+               <td>Contemporary</td>
+               <td>Numbers, Life</td>
+            </tr>
+         </tbody>
+      </table>
+      <footer>
+         <a href = "https://www.linkedin.com/in/vasinnarkar/" target="_blank">
+            <div class = "icon">
+               <object height = 25px width= 25px type="image/svg+xml" data="linkedin.svg">
+               </object>
+            </div>
+         </a>
+         <a href = "https://twitter.com/violetsinn" target="_blank">
+            <div class = "icon">
+               <object height = 25px width= 25px type="image/svg+xml" data="twitter.svg">
+               </object>
+            </div>
+         </a>
+         <a href = "https://github.com/violetsinn" target="_blank">
+            <div class = "icon">
+               <object height = 25px width= 25px type="image/svg+xml" data="github.svg">
+               </object>
+            </div>
+         </a>
+         <p ><small>© Violet Sinnarkar 2019 | <a style="color: #8F5E99" href="credits.html">Credits</a></small></p>
+      </footer>
+   </body>
 </html>
