--- a/poetry.html
+++ b/poetry.html
@@ -23,9 +23,8 @@
       </nav>
       <blockquote>
          Poetry is not only dream and vision; it is the skeleton architecture of our lives. It lays the foundations for a future of change, a bridge across our fears of what has never been before.
-         <br>
-         -Audre Lorde, <i>Poetry Is Not A Luxury</i>
       </blockquote>
+      <p>-Audre Lorde, <i>Poetry Is Not A Luxury</i>
       <table id="poetryTable" style="width: 100%; border-collapse: collapse; margin-top: 20px;">
          <thead>
             <tr>
