--- a/poetry.html
+++ b/poetry.html
@@ -31,7 +31,6 @@
                <th>Title</th>
                <th>Author</th>
                <th>Nationality</th>
-               <th>Year Published</th>
                <th>Era</th>
                <th>Theme</th>
             </tr>
@@ -41,55 +40,48 @@
                <td>Hymn to the Penates</td>
                <td>Robert Southey</td>
                <td>British</td>
-               <td>1796</td>
                <td>Romantic</td>
-               <td>Religion, Home, Devotion</td>
+               <td>Home</td>
             </tr>
             <tr>
                <td>Ozymandius</td>
                <td>Percy Bysshe Shelley</td>
                <td>British</td>
-               <td>1818</td>
                <td>Romantic</td>
-               <td>Impermanence, Hubris</td>
+               <td>Time</td>
             </tr>
             <tr>
                <td>To His Coy Mistress</td>
                <td>Andrew Marvell</td>
                <td>British</td>
-               <td>1681</td>
                <td>Metaphysical</td>
-               <td>Love, Time, Mortality</td>
+               <td>Love</td>
             </tr>
             <tr>
                <td>The Uses of Sorrow</td>
                <td>Mary Oliver</td>
                <td>American</td>
-               <td>1986</td>
                <td>Contemporary</td>
-               <td>Resilience, Nature, Healing</td>
+               <td>Love</td>
             </tr>
             <tr>
                <td>When You Are Old</td>
                <td>William Butler Yeats</td>
                <td>Irish</td>
-               <td>1893</td>
                <td>Modernist</td>
-               <td>Love, Aging, Reflection</td>
+               <td>Time</td>
             </tr>
             <tr>
                <td>Sonnet 43</td>
                <td>Elizabeth Barrett Browning</td>
                <td>British</td>
-               <td>1850</td>
                <td>Victorian</td>
-               <td>Love, Devotion</td>
+               <td>Love</td>
             </tr>
             <tr>
                <td>Epitaph to a Dog</td>
                <td>Lord Byron</td>
                <td>British</td>
-               <td>1808</td>
                <td>Romantic</td>
                <td>Love, Loss, Loyalty</td>
             </tr>
@@ -97,17 +89,15 @@
                <td>Half Life</td>
                <td>Khalil Gibran</td>
                <td>Lebanese</td>
-               <td>1918</td>
                <td>Modernist</td>
-               <td>Life, Mortality</td>
+               <td>Life</td>
             </tr>
             <tr>
                <td>The New Colossus</td>
                <td>Emma Lazarus</td>
                <td>American</td>
-               <td>1883</td>
                <td>Late 19th Century</td>
-               <td>Immigration, Liberty</td>
+               <td>Freedom</td>
             </tr>
             <tr>
                <td>Women Don't Riot</td>
@@ -115,23 +105,21 @@
                <td>American</td>
                <td>Contemporary</td>
                <td>Contemporary</td>
-               <td>Feminism, Social Justice</td>
+               <td>Freedom</td>
             </tr>
             <tr>
                <td>Late Fragment</td>
                <td>Raymond Carver</td>
                <td>American</td>
-               <td>1988</td>
                <td>Contemporary</td>
-               <td>Love, Loss, Reflection</td>
+               <td>Life</td>
             </tr>
             <tr>
                <td>You Fit Into Me</td>
                <td>Margaret Atwood</td>
                <td>Canadian</td>
-               <td>1960</td>
                <td>Contemporary</td>
-               <td>Love, Irony</td>
+               <td>Love</td>
             </tr>
             <tr>
                <td>Funeral Blues</td>
@@ -139,167 +127,147 @@
                <td>British</td>
                <td>1936</td>
                <td>Modernist</td>
-               <td>Grief, Loss</td>
+               <td>Loss</td>
             </tr>
             <tr>
                <td>Those Winter Sundays</td>
                <td>Robert Hayden</td>
                <td>American</td>
-               <td>1962</td>
                <td>Contemporary</td>
-               <td>Family, Sacrifice</td>
+               <td>Love</td>
             </tr>
             <tr>
                <td>Death Be Not Proud</td>
                <td>John Donne</td>
                <td>British</td>
-               <td>1609</td>
                <td>Metaphysical</td>
-               <td>Mortality, Faith</td>
+               <td>Time</td>
             </tr>
             <tr>
                <td>No Man is an Island</td>
                <td>John Donne</td>
                <td>British</td>
-               <td>1624</td>
                <td>Metaphysical</td>
-               <td>Community, Interconnectedness</td>
+               <td>Life</td>
             </tr>
             <tr>
                <td>Desiderata</td>
                <td>Max Ehrmann</td>
                <td>American</td>
-               <td>1927</td>
                <td>Contemporary</td>
-               <td>Life Advice, Philosophy</td>
+               <td>Life</td>
             </tr>
             <tr>
                <td>Suicide in the Trenches</td>
                <td>Siegfried Sassoon</td>
                <td>British</td>
-               <td>1918</td>
                <td>Modernist</td>
-               <td>War, Trauma</td>
+               <td>Life</td>
             </tr>
             <tr>
                <td>Mirror, Mirror</td>
                <td>Spike Mulligan</td>
                <td>British</td>
-               <td>20th Century</td>
                <td>Contemporary</td>
-               <td>Humor, Irony</td>
+               <td>Beauty</td>
             </tr>
             <tr>
                <td>The Lady's Reward</td>
                <td>Dorothy Parker</td>
                <td>American</td>
-               <td>1928</td>
                <td>Contemporary</td>
-               <td>Love, Satire</td>
+               <td>Love</td>
             </tr>
             <tr>
                <td>Somebody's Song</td>
                <td>Dorothy Parker</td>
                <td>American</td>
-               <td>1920s</td>
                <td>Contemporary</td>
-               <td>Love, Irony</td>
+               <td>Love</td>
             </tr>
             <tr>
                <td>Purposely Ungrammatical Love Song</td>
                <td>Dorothy Parker</td>
                <td>American</td>
-               <td>1920s</td>
                <td>Contemporary</td>
-               <td>Love, Humor</td>
+               <td>Love</td>
             </tr>
             <tr>
                <td>On Being a Woman</td>
                <td>Dorothy Parker</td>
                <td>American</td>
-               <td>1920s</td>
                <td>Contemporary</td>
-               <td>Feminism, Society</td>
+               <td>Love</td>
             </tr>
             <tr>
                <td>Midnight</td>
                <td>Dorothy Parker</td>
                <td>American</td>
-               <td>1920s</td>
                <td>Contemporary</td>
-               <td>Reflection, Time</td>
+               <td>Time</td>
             </tr>
             <tr>
                <td>Lullaby</td>
                <td>Dorothy Parker</td>
                <td>American</td>
-               <td>1920s</td>
                <td>Contemporary</td>
-               <td>Love, Melancholy</td>
+               <td>Love</td>
             </tr>
             <tr>
                <td>Indian Summer</td>
                <td>Dorothy Parker</td>
                <td>American</td>
-               <td>1920s</td>
                <td>Contemporary</td>
-               <td>Reflection, Aging</td>
+               <td>Time</td>
             </tr>
             <tr>
                <td>Autumn Valentine</td>
                <td>Dorothy Parker</td>
                <td>American</td>
-               <td>1920s</td>
                <td>Contemporary</td>
-               <td>Love, Irony</td>
+               <td>Love</td>
             </tr>
             <tr>
                <td>Don't Go Far Off</td>
                <td>Pablo Neruda</td>
                <td>Chilean</td>
-               <td>1950s</td>
                <td>Contemporary</td>
-               <td>Love, Longing</td>
+               <td>Love</td>
             </tr>
             <tr>
                <td>Differences of Opinion</td>
                <td>Wendy Cope</td>
                <td>British</td>
-               <td>1980s</td>
                <td>Contemporary</td>
-               <td>Humor, Relationships</td>
+               <td>Life</td>
             </tr>
             <tr>
                <td>Next Time</td>
                <td>Mary Oliver</td>
                <td>American</td>
-               <td>1980s</td>
                <td>Contemporary</td>
-               <td>Love, Nature</td>
+               <td>Love</td>
             </tr>
             <tr>
                <td>Young</td>
                <td>Anne Sexton</td>
                <td>American</td>
-               <td>1960s</td>
                <td>Contemporary</td>
-               <td>Life, Aging</td>
+               <td>Life</td>
             </tr>
             <tr>
                <td>You Men</td>
                <td>Juana Ines de la Cruz</td>
                <td>Mexican</td>
-               <td>17th Century</td>
                <td>Baroque</td>
-               <td>Gender, Society</td>
+               <td>Life</td>
             </tr>
             <tr>
                <td>Ode to Numbers</td>
                <td>Pablo Neruda</td>
                <td>Chilean</td>
-               <td>20th Century</td>
                <td>Contemporary</td>
-               <td>Numbers, Life</td>
+               <td>Life</td>
             </tr>
          </tbody>
       </table>
