fix table alignment

--- a/poetry.html
+++ b/poetry.html
@@ -24,7 +24,7 @@
       <blockquote>
          Poetry is not only dream and vision; it is the skeleton architecture of our lives. It lays the foundations for a future of change, a bridge across our fears of what has never been before.
       </blockquote>
-      <p>-Audre Lorde, <i>Poetry Is Not A Luxury</i>
+      <p style="text-align: right;">-Audre Lorde, <i>Poetry Is Not A Luxury</i></p>
       <table id="poetryTable" style="width: 100%; border-collapse: collapse; margin-top: 20px;">
          <thead>
             <tr>
@@ -83,7 +83,7 @@
                <td>Lord Byron</td>
                <td>British</td>
                <td>Romantic</td>
-               <td>Love, Loss, Loyalty</td>
+               <td>Love</td>
             </tr>
             <tr>
                <td>Half Life</td>
@@ -125,7 +125,6 @@
                <td>Funeral Blues</td>
                <td>W.H. Auden</td>
                <td>British</td>
-               <td>1936</td>
                <td>Modernist</td>
                <td>Loss</td>
             </tr>
