fix blockquote citation

--- a/poetry.html
+++ b/poetry.html
@@ -24,7 +24,7 @@
 		<blockquote>
 			Poetry is not only dream and vision; it is the skeleton architecture of our lives. It lays the foundations for a future of change, a bridge across our fears of what has never been before.
 		</blockquote>
-		<p style="text-align: right;">-Audre Lorde, <i>Poetry Is Not A Luxury</i></p>
+		<p style="text-align: right;">-Audre Lorde, <i>Sister Outsider: Essays & Speeches</i>, p. 38</p>
 		<table id="poetryTable" style="width: 100%; border-collapse: collapse; margin-top: 20px;">
 			<thead>
 				<tr>
