--- a/poetry.html
+++ b/poetry.html
@@ -24,6 +24,7 @@
 		<blockquote>
 			Poetry is not only dream and vision; it is the skeleton architecture of our lives. It lays the foundations for a future of change, a bridge across our fears of what has never been before.
 		</blockquote>
+		<p> Here is a selection of my favorite poems.
 		<p style="text-align: right;">-Audre Lorde, <i>Sister Outsider: Essays & Speeches</i>, p. 38</p>
 		<table id="poetryTable" style="width: 100%; border-collapse: collapse; margin-top: 20px;">
 			<thead>
@@ -37,7 +38,14 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td>a href="funeral-blues.html" style="color: #8F5E99">Funeral Blues</a></td>
+					<td><a href = "https://thepoetryhour.com/poems/funeral-blues/">Funeral Blues</a></td>
+					<td>W.H. Auden</td>
+					<td>British</td>
+					<td>Modernist</td>
+					<td>Loss</td>
+				</tr>
+				<tr>
+					<td><a href = "https://www.poetryfoundation.org/poems/161869/the-more-loving-one-65a7f822258fd">The More Loving One</a></td>
 					<td>W.H. Auden</td>
 					<td>British</td>
 					<td>Modernist</td>
@@ -248,6 +256,8 @@
 				</tr>
 			</tbody>
 		</table>
+
+		<p> Thanks to <a href = "https://www.poetryfoundation.org/">Poetry Foundation</a> and <a href = "https://thepoetryhour.com/about/">The Josephine Hart Poetry Foundation</a> for securing permission to reprint some of the works mentioned above which are still under copyright. </p>
 		<footer>
 			<a href = "https://www.linkedin.com/in/vasinnarkar/" target="_blank">
 				<div class = "icon">
