move text on poetry page

--- a/poetry.html
+++ b/poetry.html
@@ -24,8 +24,8 @@
 		<blockquote>
 			Poetry is not only dream and vision; it is the skeleton architecture of our lives. It lays the foundations for a future of change, a bridge across our fears of what has never been before.
 		</blockquote>
-		<p> Here is a selection of my favorite poems.
 		<p style="text-align: right;">-Audre Lorde, <i>Sister Outsider: Essays & Speeches</i>, p. 38</p>
+		<p> Here is a selection of my favorite poems. Thanks to <a href = "https://www.poetryfoundation.org/">Poetry Foundation</a> and <a href = "https://thepoetryhour.com/about/">The Josephine Hart Poetry Foundation</a> for securing permission to reprint some of the works mentioned above which are still under copyright.</p>
 		<table id="poetryTable" style="width: 100%; border-collapse: collapse; margin-top: 20px;">
 			<thead>
 				<tr>
@@ -256,8 +256,6 @@
 				</tr>
 			</tbody>
 		</table>
-
-		<p> Thanks to <a href = "https://www.poetryfoundation.org/">Poetry Foundation</a> and <a href = "https://thepoetryhour.com/about/">The Josephine Hart Poetry Foundation</a> for securing permission to reprint some of the works mentioned above which are still under copyright. </p>
 		<footer>
 			<a href = "https://www.linkedin.com/in/vasinnarkar/" target="_blank">
 				<div class = "icon">
