testing internal poetry links...

--- a/poetry.html
+++ b/poetry.html
@@ -25,7 +25,7 @@
 			Poetry is not only dream and vision; it is the skeleton architecture of our lives. It lays the foundations for a future of change, a bridge across our fears of what has never been before.
 		</blockquote>
 		<p style="text-align: right;">-Audre Lorde, <i>Sister Outsider: Essays & Speeches</i>, p. 38</p>
-		<p> Here is a selection of my favorite poems. Thanks to <a href = "https://www.poetryfoundation.org/">Poetry Foundation</a> and <a href = "https://thepoetryhour.com/about/">The Josephine Hart Poetry Foundation</a> for securing permission to reprint some of the works mentioned above which are still under copyright.</p>
+		<p> Here is a selection of my favorite poems. Thanks to <a href = "https://www.poetryfoundation.org/">Poetry Foundation</a> and <a href = "https://thepoetryhour.com/about/">The Josephine Hart Poetry Foundation</a> for securing permission to reprint some of the works mentioned below which are still under copyright.</p>
 		<table id="poetryTable" style="width: 100%; border-collapse: collapse; margin-top: 20px;">
 			<thead>
 				<tr>
@@ -42,24 +42,24 @@
 					<td>W.H. Auden</td>
 					<td>British</td>
 					<td>Modernist</td>
-					<td>Loss</td>
+					<td>Love</td>
 				</tr>
 				<tr>
 					<td><a href = "https://www.poetryfoundation.org/poems/161869/the-more-loving-one-65a7f822258fd">The More Loving One</a></td>
 					<td>W.H. Auden</td>
 					<td>British</td>
 					<td>Modernist</td>
-					<td>Loss</td>
+					<td>Love</td>
 				</tr>
 				<tr>
-					<td>You Fit Into Me</td>
+					<td><a href = "https://www.poetryfoundation.org/poems/151653/you-fit-into-me">[you fit into me]</a></td>
 					<td>Margaret Atwood</td>
 					<td>Canadian</td>
 					<td>Contemporary</td>
 					<td>Love</td>
 				</tr>
 				<tr>
-					<td>Sonnet 43</td>
+					<td><a href = "poetry/how-do-i-love-thee.html">How Do I Love Thee?</a></td>
 					<td>Elizabeth Barrett Browning</td>
 					<td>British</td>
 					<td>Victorian</td>
