adding style to internal links

--- a/poetry/how-do-i-love-thee.html
+++ b/poetry/how-do-i-love-thee.html
@@ -21,42 +21,44 @@
 				<li><a href="blog.html" style="color: #8F5E99">Blog</a></li>
 			</ul>
 		</nav>
-<p>
-How do I love thee? Let me count the ways.<br>
-I love thee to the depth and breadth and height<br>
-My soul can reach, when feeling out of sight<br>
-For the ends of being and ideal grace.<br>
-I love thee to the level of every day’s<br>
-Most quiet need, by sun and candle-light.<br>
-I love thee freely, as men strive for right.<br>
-I love thee purely, as they turn from praise.<br>
-I love thee with the passion put to use<br>
-In my old griefs, and with my childhood’s faith.<br>
-I love thee with a love I seemed to lose<br>
-With my lost saints. I love thee with the breath,<br>
-Smiles, tears, of all my life; and, if God choose,<br>
-I shall but love thee better after death.</p>
-
-		<footer>
-			<a href = "https://www.linkedin.com/in/vasinnarkar/" target="_blank">
-				<div class = "icon">
-					<object height = 25px width= 25px type="image/svg+xml" data="linkedin.svg">
-					</object>
-				</div>
-			</a>
-			<a href = "https://twitter.com/violetsinn" target="_blank">
-				<div class = "icon">
-					<object height = 25px width= 25px type="image/svg+xml" data="twitter.svg">
-					</object>
-				</div>
-			</a>
-			<a href = "https://github.com/violetsinn" target="_blank">
-				<div class = "icon">
-					<object height = 25px width= 25px type="image/svg+xml" data="github.svg">
-					</object>
-				</div>
-			</a>
-			<p ><small>© Violet Sinnarkar 2019 | <a style="color: #8F5E99" href="credits.html">Credits</a></small></p>
-		</footer>
+		<body>
+			<p>
+				How do I love thee? Let me count the ways.<br>
+				I love thee to the depth and breadth and height<br>
+				My soul can reach, when feeling out of sight<br>
+				For the ends of being and ideal grace.<br>
+				I love thee to the level of every day’s<br>
+				Most quiet need, by sun and candle-light.<br>
+				I love thee freely, as men strive for right.<br>
+				I love thee purely, as they turn from praise.<br>
+				I love thee with the passion put to use<br>
+				In my old griefs, and with my childhood’s faith.<br>
+				I love thee with a love I seemed to lose<br>
+				With my lost saints. I love thee with the breath,<br>
+				Smiles, tears, of all my life; and, if God choose,<br>
+				I shall but love thee better after death.
+			</p>
+	</body>
+	<footer>
+		<a href = "https://www.linkedin.com/in/vasinnarkar/" target="_blank">
+			<div class = "icon">
+				<object height = 25px width= 25px type="image/svg+xml" data="linkedin.svg">
+				</object>
+			</div>
+		</a>
+		<a href = "https://twitter.com/violetsinn" target="_blank">
+			<div class = "icon">
+				<object height = 25px width= 25px type="image/svg+xml" data="twitter.svg">
+				</object>
+			</div>
+		</a>
+		<a href = "https://github.com/violetsinn" target="_blank">
+			<div class = "icon">
+				<object height = 25px width= 25px type="image/svg+xml" data="github.svg">
+				</object>
+			</div>
+		</a>
+		<p ><small>© Violet Sinnarkar 2019 | <a style="color: #8F5E99" href="credits.html">Credits</a></small></p>
+	</footer>
 	</body>
 </html>
