--- a/poetry.html
+++ b/poetry.html
@@ -59,7 +59,7 @@
 					<td>Love</td>
 				</tr>
 				<tr>
-					<td><a href = "poetry/how-do-i-love-thee.html">How Do I Love Thee?</a></td>
+					<td><a href = "poetry/how-do-i-love-thee.html" style="color: #8F5E99">How Do I Love Thee?</a></td>
 					<td>Elizabeth Barrett Browning</td>
 					<td>British</td>
 					<td>Victorian</td>
