add change on change

--- a/poetry.html
+++ b/poetry.html
@@ -59,6 +59,13 @@
 					<td>Love</td>
 				</tr>
 				<tr>
+					<td><a href = "poetry/change-on-change.html" style="color: #8F5E99">Change on Change</a></td>
+					<td>Elizabeth Barrett Browning</td>
+					<td>British</td>
+					<td>Victorian</td>
+					<td>Love</td>
+				</tr>
+				<tr>
 					<td><a href = "poetry/how-do-i-love-thee.html" style="color: #8F5E99">How Do I Love Thee?</a></td>
 					<td>Elizabeth Barrett Browning</td>
 					<td>British</td>
