--- a/poetry/change-on-change.html
+++ b/poetry/change-on-change.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Violet Sinnarkar</title>
-		<link rel = "stylesheet" type = "text/css" href = "css/main.css">
+		<link rel = "stylesheet" type = "text/css" href = "./css/main.css">
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141113114-1"></script>
 		<script>
@@ -23,6 +23,8 @@
 		</nav>
 		<body>
 			<p>
+			<h1>Change on Change</h1>
+			<h2>by Elizabeth Barrett Browning</h2>
 				Three months ago, the stream did flow,<br>
 				The lilies bloomed along the edge;<br>
 				And we were lingering to and fro,—<br>
@@ -47,6 +49,8 @@
 				And why, since these be changed, I trow,<br>
 				Should I change less than thou?
 			</p>
+
+			<p> I first read this poem in October 2025, and it reminded me of a breakup I went through nearly a year ago. The opening lines are almost childlike in the way they express joy and wonder at simple things like running water, flowers, and snow. It evoked memories of the innocence and naivete of a new love. I admire Browning's attitude towards love itself, expressed in line 6, where she discusses her desire to free her lover rather than possess them. At first, her perspective seemed incredibly mature and idealistic. I was amused, however, by how quickly that idealism turned to realism, when she asks - almost sarcastically - why her lover should stay the same if even flowers don't? In the end, I related to her rightful anger that her lover's emotions were "false and frail", highlighting the painful gap between idealized love and human imperfection.</p>
 	</body>
 	<footer>
 		<a href = "https://www.linkedin.com/in/vasinnarkar/" target="_blank">
