--- a/poetry/change-on-change.html
+++ b/poetry/change-on-change.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Violet Sinnarkar</title>
-		<link rel = "stylesheet" type = "text/css" href = "./css/main.css">
+		<link rel = "stylesheet" type = "text/css" href = "../css/main.css">
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141113114-1"></script>
 		<script>
