--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,7 @@
 <html>
 
 	<head>
+
 		<title>Violet Sinnarkar</title>
 		<link rel = "stylesheet" type = "text/css" href = "css/main.css">
 
@@ -21,41 +22,16 @@
 
 		<nav>
     		<ul>
-					<li><a href="index.html" style="color: #8F5E99">Home</a></li>
-					<li><a href="about.html" style="color: #8F5E99">About</a></li>
-					<li><a href="projects.html" style="color: #8F5E99">Projects</a></li>
-					<li><a href="blog.html" style="color: #8F5E99"><b>Blog</b></a></li>
+	        			<li><a href="index.html" style="color: #8F5E99"><b>Home</b></a></li>
+					<li><a href="cv_20251005.pdf" style="color: #8F5E99">CV</a></li>
+					<li><a href="poetry.html" style="color: #8F5E99">Poetry</a></li>
+					<li><a href="blog.html" style="color: #8F5E99">Blog</a></li>
     		</ul>
 		</nav>
 
-		<center>
-			<p>This page is currently under construction.</p>
-		</center>
+	<p>This page is currently under construction. </p>
 
-		<footer>
-
-			<a href = "https://www.linkedin.com/in/vasinnarkar/" target="_blank">
-				<div class = "icon">
-					<object height = 25px width= 25px type="image/svg+xml" data="linkedin.svg">
-					</object>
-				</div>
-			</a>
-
-			<a href = "https://twitter.com/violetsinn" target="_blank">
-				<div class = "icon">
-					<object height = 25px width= 25px type="image/svg+xml" data="twitter.svg">
-					</object>
-				</div>
-			</a>
-
-			<a href = "https://github.com/violetsinn" target="_blank">
-				<div class = "icon">
-					<object height = 25px width= 25px type="image/svg+xml" data="github.svg">
-					</object>
-				</div>
-			</a>
-
-    	<p ><small>© Violet Sinnarkar 2019 | <a style="color: #8F5E99" href="credits.html">Credits</a></small></p>
+    	<p ><small>© 2025 Violet Sinnarkar | <a style="color: #8F5E99" href="credits.html">Credits</a></small></p>
 
 		</footer>
 
