--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 	<p>Before joining Apple, I worked at Uber and Lyft. I also earned an undergraduate degree from Berkeley, where I led the <a href = "debate.html" style="color: #8F5E99">debate</a> team.</p>
 
-	<p>In my free time, I enjoy <a href = "https://www.goodreads.com/user/show/7741912-violet" style="color: #8F5E99">reading</a>, running around San Francisco, and taking on various home improvement projects. You can contact me at violets [at] apple [dot] com. </p>
+	<p>In my free time, I enjoy <a href = "https://www.goodreads.com/user/show/7741912-violet" style="color: #8F5E99">reading</a>, running, and taking on various home improvement projects. You can contact me at violets [at] apple [dot] com. </p>
 
 		<footer>
 
