--- a/poetry/change-on-change.html
+++ b/poetry/change-on-change.html
@@ -22,9 +22,9 @@
 			</ul>
 		</nav>
 		<body>
+			<h2>Change on Change</h2>
+			<h3>by Elizabeth Barrett Browning</h3>
 			<p>
-			<h1>Change on Change</h1>
-			<h2>by Elizabeth Barrett Browning</h2>
 				Three months ago, the stream did flow,<br>
 				The lilies bloomed along the edge;<br>
 				And we were lingering to and fro,—<br>
@@ -50,7 +50,7 @@
 				Should I change less than thou?
 			</p>
 
-			<p> I first read this poem in October 2025, and it reminded me of a breakup I experienced nearly a year ago. The opening lines are almost childlike in the way they express joy and wonder at simple things like running water, flowers, and snow, evoking memories of the innocence and naivete of a new love. I admire Browning's attitude towards love itself, expressed in line 6, where she discusses her desire to free her lover rather than possess them. At first, her perspective seemed incredibly mature and idealistic. I am amused, however, by how quickly that idealism turns into realism, when she asks - almost sarcastically - why her lover should stay the same if even flowers don't. In the end, I relate to her rightful anger that her lover's emotions were "false and frail", highlighting the painful gap between idealized love and human imperfection.</p>
+			<p> Initial Thoughts: I first read this poem in October 2025, and it reminded me of a breakup I experienced nearly a year ago. The opening lines are almost childlike in the way they express joy and wonder at simple things like running water, flowers, and snow, evoking memories of the innocence and naivete of a new love. I admire Browning's attitude towards love itself, expressed in line 6, where she discusses her desire to free her lover rather than possess them. At first, her perspective seemed incredibly mature and idealistic. I am amused, however, by how quickly that idealism turns into realism, when she asks - almost sarcastically - why her lover should stay the same if even flowers don't. In the end, I relate to her rightful anger that her lover's emotions were "false and frail", highlighting the painful gap between idealized love and human imperfection.</p>
 	</body>
 	<footer>
 		<a href = "https://www.linkedin.com/in/vasinnarkar/" target="_blank">
