fix formatting cont

--- a/poetry/how-do-i-love-thee.html
+++ b/poetry/how-do-i-love-thee.html
@@ -22,6 +22,8 @@
 			</ul>
 		</nav>
 		<body>
+			<h2> How Do I Love Thee? (Sonnet 43) </h2>
+			<h3> By Elizabeth Barrett Browning </h3>
 			<p>
 				How do I love thee? Let me count the ways.<br>
 				I love thee to the depth and breadth and height<br>
