--- a/poetry/change-on-change.html
+++ b/poetry/change-on-change.html
@@ -15,10 +15,10 @@
 		<h1>Violet Sinnarkar</h1>
 		<nav>
 			<ul>
-				<li><a href="index.html" style="color: #8F5E99">Home</a></li>
-				<li><a href="cv_20251005.pdf" style="color: #8F5E99">CV</a></li>
-				<li><a href="poetry.html" style="color: #8F5E99">Poetry</a></li>
-				<li><a href="blog.html" style="color: #8F5E99">Blog</a></li>
+				<li><a href="../index.html" style="color: #8F5E99">Home</a></li>
+				<li><a href="../cv_20251005.pdf" style="color: #8F5E99">CV</a></li>
+				<li><a href="../poetry.html" style="color: #8F5E99">Poetry</a></li>
+				<li><a href="../blog.html" style="color: #8F5E99">Blog</a></li>
 			</ul>
 		</nav>
 		<body>
