change thoughts to notes

--- a/poetry/how-do-i-love-thee.html
+++ b/poetry/how-do-i-love-thee.html
@@ -40,6 +40,9 @@
 				Smiles, tears, of all my life; and, if God choose,<br>
 				I shall but love thee better after death.
 			</p>
+
+	<p><b> Initial Notes: I first read this poem in June 2021. </b>
+	</p>
 	</body>
 	<footer>
 		<a href = "https://www.linkedin.com/in/vasinnarkar/" target="_blank">
