adding WUDC note

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 	<p>I am a data scientist at Apple, focusing on applied statistical methods for experimentation and causal inference. I currently work on <a href = "https://tv.apple.com/" style="color: #8F5E99">Apple TV+</a>. My favorite shows are <i>Bad Sisters</i>, <i>Shrinking</i>, and <i>Lessons in Chemistry</i>.</p>
 
-	<p>Before joining Apple, I worked at Uber and Lyft. I also earned an undergraduate degree from Berkeley, where I led the <a href = "debate.html" style="color: #8F5E99">debate</a> team.</p>
+	<p>Before joining Apple, I worked at Uber and Lyft. I also earned an undergraduate degree from Berkeley, where I led the <a href = "debate.html" style="color: #8F5E99">debate</a> team and qualified to the World Universities Debating Championship.</p>
 
 	<p>In my free time, I enjoy <a href = "https://www.goodreads.com/user/show/7741912-violet" style="color: #8F5E99">reading</a>, running, and taking on various home improvement projects. You can contact me at violets [at] apple [dot] com. </p>
 
