--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 	<p>Before joining Apple, I worked at Uber and Lyft. I also earned an undergraduate degree from Berkeley, where I led the <a href = "debate.html" style="color: #8F5E99">debate</a> team and qualified to the World Universities Debating Championship.</p>
 
-	<p>In my free time, I enjoy <a href = "https://www.goodreads.com/user/show/7741912-violet" style="color: #8F5E99">reading</a>, running, and taking on various home improvement projects. You can contact me at violets [at] apple [dot] com. </p>
+	<p>In my free time, I enjoy <a href = "https://www.goodreads.com/user/show/7741912-violet" style="color: #8F5E99">reading</a>, <a href = "https://www.strava.com/athletes/71718313" style="color: #8F5E99">running</a>, and taking on various home improvement projects. You can contact me at violets [at] apple [dot] com. </p>
 
 		<footer>
 
@@ -56,6 +56,14 @@
 			<a href = "https://www.goodreads.com/user/show/7741912-violet" target="_blank">
 				<div class = "icon">
 					<object height = 25px width= 25px type="image/svg+xml" data="goodreads.png">
+					</object>
+				</div>
+			</a>
+
+
+			<a href = "https://www.strava.com/athletes/71718313" target="_blank">
+				<div class = "icon">
+					<object height = 25px width= 25px type="image/svg+xml" data="strava.svg">
 					</object>
 				</div>
 			</a>
