center table headers

--- a/poetry/how-do-i-love-thee.html
+++ b/poetry/how-do-i-love-thee.html
@@ -1,69 +1,73 @@
 <html>
-	<head>
-		<title>Violet Sinnarkar</title>
-		<link rel = "stylesheet" type = "text/css" href = "../css/main.css">
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141113114-1"></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
-			gtag('config', 'UA-141113114-1');
-		</script>
-	</head>
-	<body>
-		<h1>Violet Sinnarkar</h1>
-		<nav>
-			<ul>
-				<li><a href="../index.html" style="color: #8F5E99">Home</a></li>
-				<li><a href="../cv_20251005.pdf" style="color: #8F5E99">CV</a></li>
-				<li><a href="../poetry.html" style="color: #8F5E99">Poetry</a></li>
-				<li><a href="../blog.html" style="color: #8F5E99">Blog</a></li>
-			</ul>
-		</nav>
-		<body>
-			<h2> How Do I Love Thee? (Sonnet 43) </h2>
-			<h3> By Elizabeth Barrett Browning </h3>
-			<p>
-				How do I love thee? Let me count the ways.<br>
-				I love thee to the depth and breadth and height<br>
-				My soul can reach, when feeling out of sight<br>
-				For the ends of being and ideal grace.<br>
-				I love thee to the level of every day’s<br>
-				Most quiet need, by sun and candle-light.<br>
-				I love thee freely, as men strive for right.<br>
-				I love thee purely, as they turn from praise.<br>
-				I love thee with the passion put to use<br>
-				In my old griefs, and with my childhood’s faith.<br>
-				I love thee with a love I seemed to lose<br>
-				With my lost saints. I love thee with the breath,<br>
-				Smiles, tears, of all my life; and, if God choose,<br>
-				I shall but love thee better after death.
-			</p>
 
-	<p><b> Initial Notes: I first read this poem in June 2021. </b>
-	</p>
+<head>
+	<title>Violet Sinnarkar</title>
+	<link rel="stylesheet" type="text/css" href="../css/main.css">
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-YVBM251Y7B"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-YVBM251Y7B');
+	</script>
+</head>
+
+<body>
+	<h1>Violet Sinnarkar</h1>
+	<nav>
+		<ul>
+			<li><a href="../index.html" style="color: #8F5E99">Home</a></li>
+			<li><a href="../cv_20251005.pdf" style="color: #8F5E99">CV</a></li>
+			<li><a href="../poetry.html" style="color: #8F5E99">Poetry</a></li>
+			<li><a href="../blog.html" style="color: #8F5E99">Blog</a></li>
+		</ul>
+	</nav>
+
+	<body>
+		<h2> How Do I Love Thee? (Sonnet 43) </h2>
+		<h3> By Elizabeth Barrett Browning </h3>
+		<p>
+			How do I love thee? Let me count the ways.<br>
+			I love thee to the depth and breadth and height<br>
+			My soul can reach, when feeling out of sight<br>
+			For the ends of being and ideal grace.<br>
+			I love thee to the level of every day’s<br>
+			Most quiet need, by sun and candle-light.<br>
+			I love thee freely, as men strive for right.<br>
+			I love thee purely, as they turn from praise.<br>
+			I love thee with the passion put to use<br>
+			In my old griefs, and with my childhood’s faith.<br>
+			I love thee with a love I seemed to lose<br>
+			With my lost saints. I love thee with the breath,<br>
+			Smiles, tears, of all my life; and, if God choose,<br>
+			I shall but love thee better after death.
+		</p>
+
+		<p> <b>Personal Notes</b>:</p>
 	</body>
 	<footer>
-		<a href = "https://www.linkedin.com/in/vasinnarkar/" target="_blank">
-			<div class = "icon">
-				<object height = 25px width= 25px type="image/svg+xml" data="linkedin.svg">
+		<a href="https://www.linkedin.com/in/vasinnarkar/" target="_blank">
+			<div class="icon">
+				<object height=25px width=25px type="image/svg+xml" data="linkedin.svg">
 				</object>
 			</div>
 		</a>
-		<a href = "https://twitter.com/violetsinn" target="_blank">
-			<div class = "icon">
-				<object height = 25px width= 25px type="image/svg+xml" data="twitter.svg">
+		<a href="https://twitter.com/violetsinn" target="_blank">
+			<div class="icon">
+				<object height=25px width=25px type="image/svg+xml" data="twitter.svg">
 				</object>
 			</div>
 		</a>
-		<a href = "https://github.com/violetsinn" target="_blank">
-			<div class = "icon">
-				<object height = 25px width= 25px type="image/svg+xml" data="github.svg">
+		<a href="https://github.com/violetsinn" target="_blank">
+			<div class="icon">
+				<object height=25px width=25px type="image/svg+xml" data="github.svg">
 				</object>
 			</div>
 		</a>
-		<p ><small>© Violet Sinnarkar 2019 | <a style="color: #8F5E99" href="credits.html">Credits</a></small></p>
+		<p><small>© Violet Sinnarkar 2019 | <a style="color: #8F5E99" href="credits.html">Credits</a></small></p>
 	</footer>
-	</body>
+</body>
+
 </html>
